--- a/.github/workflows/master_ucch.yml
+++ b/.github/workflows/master_ucch.yml
@@ -22,8 +22,8 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
+        working-directory: ./webserver
         run: |
-          cd webapp
           npm install
           npm run build --if-present
           npm run test --if-present
