--- a/gamemod/UltimateCrowdControlHorse.csproj
+++ b/gamemod/UltimateCrowdControlHorse.csproj
@@ -118,14 +118,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Patches\GamePlayerPatch.cs" />
+    <Compile Include="Patches\GameControlPatch.cs" />
     <Compile Include="Patches\LobbyManagerPatch.cs" />
+    <Compile Include="Patches\NetworkClientPatch.cs" />
     <Compile Include="Patches\NetworkLobbyManagerPatch.cs" />
+    <Compile Include="Patches\PiecePlacementCursorPatch.cs" />
     <Compile Include="Patches\PlaceableMetadataListPatch.cs" />
     <Compile Include="CrowdControlMod.cs" />
     <Compile Include="Patches\PlaceablePatch.cs" />
     <Compile Include="Patches\RaftDayNightCyclePatch.cs" />
     <Compile Include="Patches\TeleporterProjectileSendPatch.cs" />
+    <Compile Include="Patches\VersusControlPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializedPlaceable.cs" />
     <Compile Include="SocketIOUnity\SocketIOClient.Newtonsoft.Json\ByteArrayConverter.cs" />
